[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/GUI/ConnectScreen.gd" type="Script" id=1]
[ext_resource path="res://Prefabs/GUI/CharacterPicker.tscn" type="PackedScene" id=2]
[ext_resource path="res://FFFFORWA.TTF" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[node name="Master" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
selecters = [ NodePath("CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/CharacterPicker"), NodePath("CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/CharacterPicker2"), NodePath("CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/CharacterPicker3"), NodePath("CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/CharacterPicker4") ]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_top = 169.0
margin_right = 1024.0
margin_bottom = 191.0
custom_fonts/font = SubResource( 1 )
text = "Dodgeball Dungeon"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
margin_top = 211.0
margin_right = 1024.0
margin_bottom = 313.0
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterPicker" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 322.0
margin_right = 402.0
margin_bottom = 102.0
rect_scale = Vector2( 1, 1 )

[node name="CharacterPicker2" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 422.0
margin_right = 502.0
margin_bottom = 102.0
rect_scale = Vector2( 1, 1 )

[node name="CharacterPicker3" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 522.0
margin_right = 602.0
margin_bottom = 102.0
rect_scale = Vector2( 1, 1 )

[node name="CharacterPicker4" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 622.0
margin_right = 702.0
margin_bottom = 102.0
rect_scale = Vector2( 1, 1 )

[node name="Notice" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_top = 333.0
margin_right = 1024.0
margin_bottom = 430.0
custom_fonts/font = SubResource( 2 )
text = "Y or Tab to add a bot
X or Ctrl to remove
Start To Start 
You Need 2 ppl to start"
align = 1

[connection signal="pick_character" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/CharacterPicker" to="." method="_on_CharacterPicker_pick_character"]
[connection signal="start" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/CharacterPicker" to="." method="_on_CharacterPicker_start"]
[connection signal="unpick_character" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/CharacterPicker" to="." method="_on_CharacterPicker_unpick_character"]
[connection signal="pick_character" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/CharacterPicker2" to="." method="_on_CharacterPicker_pick_character"]
[connection signal="start" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/CharacterPicker2" to="." method="_on_CharacterPicker_start"]
[connection signal="unpick_character" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/CharacterPicker2" to="." method="_on_CharacterPicker_unpick_character"]
[connection signal="pick_character" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/CharacterPicker3" to="." method="_on_CharacterPicker_pick_character"]
[connection signal="start" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/CharacterPicker3" to="." method="_on_CharacterPicker_start"]
[connection signal="unpick_character" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/CharacterPicker3" to="." method="_on_CharacterPicker_unpick_character"]
[connection signal="pick_character" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/CharacterPicker4" to="." method="_on_CharacterPicker_pick_character"]
[connection signal="start" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/CharacterPicker4" to="." method="_on_CharacterPicker_start"]
[connection signal="unpick_character" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/CharacterPicker4" to="." method="_on_CharacterPicker_unpick_character"]
